// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Amp AdSlot Snapshots should correctly render a desktop leaderboard AdSlot 1`] = `
<amp-ad
  data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
  data-amp-slot-index="0"
  data-block-on-consent="default"
  data-multi-size="970x250,728x90"
  data-npa-on-unknown-consent="true"
  data-slot="/4817/bbccom.test.site.amp.news"
  height="250"
  json="{\\"targeting\\":{\\"slot\\":\\"leaderboard\\",\\"asset_type\\":\\"index\\",\\"channel\\":\\"pidgin\\"}}"
  media="(min-width: 63rem)"
  type="doubleclick"
  width="970"
/>
`;

exports[`Amp AdSlot Snapshots should correctly render a mobile leaderboard AdSlot 1`] = `
<amp-ad
  data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
  data-amp-slot-index="0"
  data-block-on-consent="default"
  data-multi-size="320x50,300x50"
  data-npa-on-unknown-consent="true"
  data-slot="/4817/bbccom.test.site.amp.news"
  height="50"
  json="{\\"targeting\\":{\\"slot\\":\\"leaderboard\\",\\"asset_type\\":\\"index\\",\\"channel\\":\\"pidgin\\"}}"
  media="(max-width: 62.9375rem)"
  type="doubleclick"
  width="320"
/>
`;

exports[`Amp AdSlot Snapshots should correctly render a mobile mpu AdSlot 1`] = `
<amp-ad
  data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
  data-amp-slot-index="0"
  data-block-on-consent="default"
  data-multi-size="300x250"
  data-npa-on-unknown-consent="true"
  data-slot="/4817/bbccom.test.site.amp.news"
  height="250"
  json="{\\"targeting\\":{\\"slot\\":\\"mpu\\",\\"asset_type\\":\\"index\\",\\"channel\\":\\"pidgin\\"}}"
  type="doubleclick"
  width="300"
/>
`;
